--- a/style.scss
+++ b/style.scss
@@ -53,3 +53,77 @@
     text-align: center;
   }
 }
+
+body {
+  background-color: beige;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  font-size: 1.5rem;
+  font-family: Arial, Helvetica, sans-serif;
+  #logo {
+    width: 20%;
+  }
+}
+
+
+li {
+  list-style: none;
+  text-align: center;
+}
+
+.preGame {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #444;
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  input {
+    margin: 20px;
+  }
+
+}
+
+#tablero {
+  min-width: 30%;
+  max-width: 90%;
+}
+
+#logs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #444;
+  color: white;
+  padding: 60px;
+  border-radius: 10px;
+  margin-top: 20px;
+  width: 40%;
+  max-width: 90%;
+  min-width: 30%;
+  overflow:auto;
+  scrollbar-color: #444 #444;
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    li {
+      margin: 10px;
+    }
+  }
+}
+
+.x-style {
+  color: #FE2E36;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.o-style {
+  color: #0156D2;
+  font-family: Arial, Helvetica, sans-serif;
+}
